<resources>
    <string name="app_name">BixBeGone</string>

    // functionality
    <string name="permissions_error_part_1">The following features won\'t work correctly due to permissions being denied: </string>
    <string name="camera_permission_feature">Launching camera </string>
    <string name="camera_permission_error">Error obtaining Camera permissions, please restart app to request again</string>
    <string name="notification_permission_feature">Notification panel </string>
    <string name="notification_permission_error">Error obtaining Notification panel permissions, please restart app to request again</string>
    <string name="change_ringer_mode_feature">Ringer mode changes </string>
    <string name="change_ringer_mode_error">Error obtaining ringer mode change permissions, please restart app to request again</string>
    <string name="change_ringer_mode_toast">Enable BixBeGone\'s access to change Do Not Disturb status</string>
    <string name="read_logs_dialog_title">Grant READ_LOGS Permission</string>
    <string name="read_logs_dialog_message">
        Please run the following command on your computer connected to your phone via ADB:
        \n\n adb -d shell pm grant com.rmathur.bixbegone android.permission.READ_LOGS
        \n\n The application will not function correctly without this permission.
    </string>
    <string name="read_logs_dialog_confirm">I ran this command</string>
    <string name="read_logs_error">READ_LOGS permission not granted, you must restart the application/service after granting this permission.</string>
    <string name="app_list_title">App List</string>
    <string name="app_selected">selected to launch on Bixby button press</string>
    <string name="ok_action">OK</string>

    // configuration block
    <string name="configuration">Configuration</string>
    <string name="service_enabled">Service Enabled</string>
    <string name="start_on_boot">Start on Boot</string>
    <string name="button_action">Button Action</string>
    <string name="action_prompt">Choose an action</string>
    <string-array name="action_array">
        <item>Do Nothing</item>
        <item>Open App</item>
        <item>Open Google Assistant</item>
        <item>Open Camera</item>
        <item>Open Notification Shade</item>
        <item>Take Screenshot</item>
        <item>Toggle Flashlight</item>
        <item>Toggle Silent/Ring</item>
        <item>Toggle Silent/Vibrate</item>
        <item>Toggle Vibrate/Ring</item>
        <item>Cycle Silent/Vibrate/Ring</item>
        <item>Home Button</item>
        <item>Recents Menu</item>
    </string-array>

    // description block
    <string name="what_does_this_do">What does this do?</string>
    <string name="service_description">
        Vivamus rhoncus quam velit, eget efficitur massa ullamcorper at. Aenean velit ex, rhoncus a
        tristique quis, semper id ante. Nullam molestie nulla a est consequat, vitae eleifend ipsum
        tristique. Vivamus sit amet fringilla metus, ut lobortis erat. Nunc rhoncus in dolor non
        pellentesque. Aenean id consectetur elit. Nam eget mattis lectus. Aenean sed volutpat ante,
        quis viverra risus. Praesent suscipit non felis maximus gravida. Etiam nec ultrices magna.
    </string>
</resources>
